# shining_clouds

./: .gitignore  Cargo.toml  README.md
src/: app_config.rs  app_error.rs  application.rs  database.rs  lib.rs  main.rs  openapi.rs  server.rs  tracing.rs
src/domain/: article_service.rs  comment_service.rs  mod.rs  profile_service.rs  tag_service.rs  user_service.rs
src/domain/commands/: add_comment_command.rs  create_article_command.rs  get_feed_query.rs  list_articles_query.rs  login_command.rs  mod.rs  register_command.rs  update_article_command.rs  update_user_command.rs
src/http/: mod.rs
src/http/dto/: article.rs  comment.rs  error.rs  login.rs  mod.rs  profile.rs  register.rs  tag.rs  user.rs
src/http/extractors/: auth_token.rs
src/http/routes/: articles.rs  auth.rs  comments.rs  create_articles.rs  health.rs  mod.rs  profiles.rs  tags.rs  users.rs
src/model/: indexed_article_field.rs  indexed_user_field.rs  limit.rs  mod.rs  offset.rs
src/model/persistence/: article.rs  article_view.rs  comment.rs  comment_view.rs  mod.rs  tag.rs  user.rs
src/model/values/: article_body.rs  article_description.rs  article_id.rs  article_title.rs  bio.rs  comment_body.rs  comment_id.rs  email.rs  image.rs  mod.rs  password.rs  password_hash.rs  slug.rs  tag_id.rs  (+3 more)
src/persistence/: article_repository.rs  comment_repository.rs  mod.rs  profile_repository.rs  schema.rs  tag_repository.rs  user_repository.rs
tests/: article_tests.rs  auth_tests.rs  comment_tests.rs  docs_tests.rs  health_tests.rs  profile_tests.rs  tag_tests.rs  user_tests.rs
tests/common/: mod.rs
(+58 files in other folders)
