[package]
name = "shining_clouds"
version = "0.3.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1", features = ["full"] }
tryphon = "0.2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.20.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "migrate", "uuid", "chrono"] }
sea-query = { version = "0.32", features = ["with-uuid"] }
sea-query-binder = { version = "0.7", features = ["sqlx-postgres", "with-uuid"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = { version = "0.5", features = ["std"] }
thiserror = "2.0"
anyhow = { version = "1.0.100", features = ["std", "backtrace"] }
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
rand = "0.9.2"
utoipa = { version = "5.3", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
